# python-setup

./: .check_0__setup_precommit_py.txt  .check_10_cli_py.txt  .check_11_cmd_build_py.txt  .check_12_cmd_build_pyi.txt  .check_13_dispatch_py.txt  .check_14_extra_tools_py.txt  .check_15_output_py.txt  .check_16_setup_py.txt  .check_17_testing_py.txt  .check_18__factories_py.txt  .check_19_test_asyncio_timeout_checker_py.txt  .check_1_asyncio_timeout_checker_py.txt  .check_20_test_beartype_checker_py.txt  .check_21_test_no_try_import_checker_py.txt  .check_22_test_stub_checker_py.txt  .check_23_test_stub_checker_callable_py.txt  .check_24_test_stub_checker_class_py.txt  .check_25_test_stub_coverage_py.txt  .check_26_test_stub_docstring_checker_py.txt  .check_27_test_stub_fidelity_invariants_py.txt  .check_28_test_stub_normalizer_py.txt  .check_29_test_tmp_path_checker_py.txt  .check_2_asyncio_timeout_checker_pyi.txt  .check_30_conftest_py.txt  .check_31__factories_py.txt  .check_32_test_autofix_conflict_py.txt  .check_33_test_baseline_diff_py.txt  .check_34_test_bench_runner_overhead_py.txt  .check_35_test_extra_tools_py.txt  .check_36_test_lint_runner_py.txt  .check_37_test_real_pipeline_smoke_py.txt  .check_38_test_setup_py.txt  .check_39_test_t11_health_checks_py.txt  .check_3_beartype_checker_py.txt  .check_40_test_t1b_self_discovery_py.txt  .check_41_test_t3_coverage_py.txt  .check_42_test_t5_compose_ruff_py.txt  .check_43_test_t9_7_compose_pyright_py.txt  .check_44_test_testing_fakes_py.txt  .check_4_no_try_import_checker_py.txt  (+71 more)
.omp/: README.md  config.yml  goal-workflow.md  lsp.json
.omp/agents/: check-and-commit-subtask.md  fact-finder.md  implement-subtask.md  orchestrate-goal-execution.md  orchestrate-subtask.md  plan-completeness-checker.md  plan-goal-execution.md  subtask-dev-process.md  task-pusher.md  wave-end-checkpoint.md
.omp/commands/: goal-flow.md  orchestrate-deep-research.md
.tmpoutput/lint-goal/: goal.md  plan1.md  plan2.md  plan3.md  summary1.md  summary2.md  summary3.md
Execute1/: W1-FixLintGates.md  W1-M1-RelativeSymlinks.md  W1-M2-ConsultantGitignore.md  W1-M3-RootSymlinks.md  W1-M4-DisableW9705.md  W1-M5-Restore500Lines.md  W1-M6-FilterPyrightNoise.md  W2-AddM2Tests.md  W2-AddM4Tests.md  W2-M8-RedeployConsultant.md  W3-M10-DocsAlignment.md
Execute2/: W1-M2-PyrightSummaryStrip.md  W1-M3-TachParserAndModules.md  W1-M4-NoFailFastPurge.md  W3-M6-FixRegressions.md  W3-M6-RegenerateLintProof.md  W4-M7-CommitBumpPush.md
config/: .pylintrc  .pylintrc-pyi  .pylintrc-tests  .yamllint  mypy.ini  pyrightconfig.json  ruff.toml  rumdl.toml  tach.toml  ty.toml
design/: 0001-compose-config-temp-dir.md  0002-ty-src-only-exception.md
docs/: custom-checks.md  overlays.md  semantic-justification.md  troubleshooting.md  tutorials.md
integration/: bench-runner-overhead.md
reports/: T8-violation-manifest.md
scratchpad/: fix_workflow.py  lint_issues_by_file.json  orchestrate.py
scripts/: create_root_symlinks.py
src/python_setup_lint/: __init__.py  __init__.pyi  __main__.py  __main__.pyi  _setup_precommit.py  _setup_precommit.pyi  _setup_pyproject.py  _setup_pyproject.pyi  _setup_update.py  _setup_update.pyi  runner.py  runner.pyi  setup.py  setup.pyi  testing.py  testing.pyi
test/: __init__.py  integration.py
tests/: __init__.py  conftest.py  integration.py  test_setup_config_symlinks.py  test_setup_precommit.py
tests/checkers/: _factories.py  test_asyncio_timeout_checker.py  test_bare_except_comment_checker.py  test_beartype_checker.py  test_generic_key_dict_checker.py  test_missing_error_chain_checker.py  test_missing_return_annotation_checker.py  test_no_try_import_checker.py  test_pyi_underscore_checker.py  test_redundant_type_guard_checker.py  test_semantic_check.py  test_semantic_threshold.py  test_silent_except_checker.py  test_structlog_checker.py  test_stub_checker.py  test_stub_checker_callable.py  test_stub_checker_class.py  test_stub_coverage.py  test_stub_docstring_checker.py  test_stub_fidelity_invariants.py  test_stub_normalizer.py  test_suppression_justification_checker.py  test_tmp_path_checker.py  test_trivial_wrapper_checker.py  test_unnamed_tuple_dict_checker.py
tests/runner/: _autofix_helpers.py  _factories.py  _factories_baseline.py  _factories_extras.py  _factories_tables.py  test_autofix_conflict.py  test_autofix_conflict_apply.py  test_autofix_conflict_integration.py  test_baseline_diff.py  test_baseline_diff_edge.py  test_baseline_diff_parsers.py  test_bench_runner_overhead.py  test_config_consistency.py  test_extra_tools.py  (+18 more)
(+150 files in other folders)
