[project]
name = "python-setup"
version = "1.2.0"
requires-python = ">=3.14"
description = "Shared linting, formatting, and dev tooling for Python projects."
readme = "README.md"
authors = [
    { name = "Vyacheslav Zavadsky" },
]
dependencies = [
    "astroid>=4.0.4",
    "beartype>=0.22.9",
    "pylint>=4.0.6",
    "pytest>=9.1.0",
    "structlog>=26.1.0",
    "tomli-w>=1.0",
]

[project.license]
text = "MIT"

[project.scripts]
lint = "python_setup_lint.runner:main"
install = "python_setup_lint.setup:main"
python-setup-test-checked = "python_setup_lint.testing:test_checked_main"
python-setup = "python_setup_lint.setup:main"

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/python_setup_lint",
]

[tool.hatch.build.targets.wheel.force-include]
"config/" = "python_setup_lint/config/"
"CodingRules.md" = "python_setup_lint/CodingRules.md"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests that are intentionally slow (benchmarks or full pipeline runs); use '-m slow' to include, '-m \"not slow\"' to exclude",
    "no_external_api: marks tests that do not call external APIs or subprocesses",
    "with_real_api: marks tests that call real external APIs or subprocesses",
    "implementation_detail: marks tests of file-private helpers not reachable through public API",
]


[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pyright>=1.1.410",
    "ty>=0.0.49",
    "rumdl>=0.2.15",
    "detect-secrets>=1.5.0",
    "yamllint>=1.35",
    "tach>=0.15",
    "pre-commit>=4.6.0",
    "typeguard>=4.5.2",
    "types-requests>=2.33.0.20260518",
    "pandas-stubs>=3.0.3.260530",
    "types-pysocks>=1.7.1.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "types-pygments>=2.20.0.20260518",
    "types-defusedxml>=0.7.0.20260504",
    "types-gunicorn>=26.0.0.20260518",
    "types-jsonschema>=4.26.0.20260518",
    "types-objgraph>=3.6.0.20260508",
    "types-pexpect>=4.9.0.20260518",
    "types-psutil>=7.2.2.20260518",
    "types-regex>=2026.5.9.20260518",
    "types-simplejson>=3.20.0.20260518",
    "types-tqdm>=4.68.0.20260608",
    "hypothesis>=6.150.0",
]
